# frontend-wasm-exercise

./: Cargo.toml  Makefile  index.html  script.js
src/: lib.rs
