[package]
name = "wasm-blur"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
image = "0.25.1"
js-sys = "0.3.69"
serde = { version = "1.0.198", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["FileReader", "Blob", "File", "console", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Window", "HtmlImageElement", "ProgressEvent", "Event"] }
